--- a/src/app/components/author-lists/author-lists.component.html
+++ b/src/app/components/author-lists/author-lists.component.html
@@ -1,1 +1,1 @@
-<app-list-item *ngIf = "apiHit =='api'" [authorList]= "authorList"></app-list-item>
+<!-- <app-list-item [authorList]= "authorList" (paginationEvent) = "goToPage($event)"></app-list-item> -->
