--- a/src/app/components/shared/list-item/list-item.component.html
+++ b/src/app/components/shared/list-item/list-item.component.html
@@ -1,1 +1,35 @@
-<p *ngFor= "let name of authorName" >{{name.name}}</p>
+<div class="row">
+    <div class="col-md-6" *ngFor="let name of authorName">
+        <div style="padding-bottom: 20px;">
+            <div class="card ">
+                <div class="card-header text-center">
+                    {{name.name}}
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">BIO</h5>
+                    <p class="card-text">{{name.bio}}</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                <div class="card-footer text-muted">
+                    2 days ago
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-end">
+        <li class="page-item {{firstPageBtn}}">
+            <a class="page-link" (click)="firstPage()"><i class="fas fa-angle-double-left"></i></a>
+        </li>
+        <li class="page-item {{previousPageBtn}}"><a class="page-link" (click)="previousPage()"><i
+                    class="fas fa-angle-left"></i></a></li>
+        <li class="page-item active   "><a class="page-link">{{page}}</a></li>
+        <li class="page-item {{nextPageBtn}}"><a class="page-link" (click)="nextPage()"><i
+                    class="fas fa-angle-right"></i></a></li>
+        <li class="page-item {{lastPageBtn}}">
+            <a class="page-link" (click)="lastPage()"><i class="fas fa-angle-double-right"></i></a>
+        </li>
+    </ul>
+</nav>
