--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -25,7 +25,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="facourites" routerLinkActive="active" >
+                                <a routerLink="favourites" routerLinkActive="active" >
                                     <p class="dropdown-heading">Favourite List</p>
                                 </a>
                             </li>
