--- a/src/app/components/author-lists/author-lists.component.html
+++ b/src/app/components/author-lists/author-lists.component.html
@@ -1,1 +1,2 @@
-<app-list-item [authorList]= "authorList" [totalCount]="totalCount" (paginationEvent) = "goToPage($event)"></app-list-item>
+<!-- <app-list-item [authorList]= "authorList" [totalCount]="totalCount" (paginationEvent) = "goToPage($event)"></app-list-item> -->
+<!-- <app-list-item [authorList]= "authorList" ></app-list-item> -->
