--- a/src/app/components/shared/list-items/list-items.component.html
+++ b/src/app/components/shared/list-items/list-items.component.html
@@ -1,27 +1,30 @@
 <div class="row">
-    <div class="col-md-6" *ngFor="let name of authorList">
-        <div style="padding-bottom: 20px;">
-            <div class="card ">
-                <div class="card-header text-center">
+    <div class="col-md-6" *ngFor="let name of authorList; let i = index">
+        <div style="padding-bottom: 20px">
+            <div class="card" style="height: 300px;">
+                <!-- <div class="card-header text-center">
                     {{name.name}}
-                </div>
+                </div> -->
                 <div class="card-body">
-                    <h5 class="card-title">BIO</h5>
-                    <p class="card-text">{{name.bio}}</p>
 
+                    <h5 class="card-title">{{name.name}}</h5>
+                    <div class="scrollable">
+                        <p class="card-text">{{name.bio}}</p>
+                        <br>
+                        <p>source: <a href="{{name.link}}">{{name.link}}</a></p>
+                    </div>
+
+                </div>
+                <div class="card-footer text-muted">
                     <a class="btn btn-outline-secondary" (click)="favourite(name._id)">
 
                         <span *ngIf="name.favourites=='love'; else add">Remove Favourites</span>
-                        <span *ngIf="name.favourites!='love'; else add">add Favourites</span>
+                        <span *ngIf="name.favourites!='love'; else add">Add Favourites</span>
                         <span>&nbsp;</span>
                         <span class="{{name.favourites}}">
                             <i class="fas fa-heart"></i>
                         </span>
                     </a>
-
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
                 </div>
             </div>
         </div>
