--- a/src/app/components/shared/list-items/list-items.component.css
+++ b/src/app/components/shared/list-items/list-items.component.css
@@ -1,3 +1,10 @@
 .love{
     color: red;
 }
+.scrollable{
+    overflow-y: auto;
+    max-height: 180px;
+}
+.card:hover{
+    border:solid 2px rgb(0, 162, 255);
+}
