--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 *{
-    background-color: #f4f9fe;
+    /* background-color: #f4f9fe; */
+    background-color: #ebfaf0;
   }
   #layoutSidenav_content {
     padding-left: 245px;
